<resources>
    <string name="app_name" translatable="false">PIC2BIM</string>
    <string name="gn_failure">Failure</string>
    <string name="gn_taskUploadStatusFailed">Failed to upload task status.\n\n%1$s</string>
    <string name="gn_yes">Yes</string>
    <string name="gn_no">No</string>
    <string name="gn_unavailable">Unavailable</string>
    <string name="gn_false">False</string>
    <string name="gn_true">True</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_home">Home</string>
    <string name="menu_taskOverview">Task Overview</string>
    <string name="menu_map">Map</string>
    <string name="menu_pathTracking">Path Tracking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gnssRawData">GNSS Raw Data</string>
    <string name="menu_about">About</string>
    <string name="menu_unownedPhoto">Unassigned Photos</string>
    <string name="title_activity_login">Sign in PIC2BIM</string>
    <string name="title_home">@string/app_name</string>
    <string name="title_map">Map</string>
    <string name="title_pathTrackingOverview">Path Tracking Overview</string>
    <string name="title_settings">Settings</string>
    <string name="title_setFilterCentroid">Centroid Location Filter Settings</string>
    <string name="title_GNSSLocationSettings" translatable="false">GNSS Location Settings</string>
    <string name="title_taskFulfill">Task Completion</string>
    <string name="title_taskPhotoGallery">Task Photo Gallery</string>
    <string name="title_taskDetail">Task Detail</string>
    <string name="title_gnnsRawData">GNSS Raw Data</string>
    <string name="title_about">About</string>
    <string name="title_permissions">Granting Permissions</string>
    <string name="title_unownedPhotos">Unassigned Photos</string>
    <string name="title_photoDetail">Photo Detail</string>
    <string name="bs_permissionDeniedTitle">Permission denied</string>
    <string name="bs_permissionDeniedContent">You denied %1$s permission.
        You will be restricted from using the full functionality of the application until you grant this permission.</string>
    <string name="bs_syncTitle">Synchronization</string>
    <string name="bs_syncStateProgress">Synchronization in progress.
        \nUse of the application is locked during synchronization.</string>
    <string name="bs_syncStateCompleteSuccess">Synchronization complete.</string>
    <string name="bs_syncStateCompleteError">Errors occurred during synchronization.</string>
    <string name="bs_syncWait">Please wait.</string>
    <string name="ms_notificationContent">Application is running</string>
    <string name="ms_deviceConditionTitle">Device condition</string>
    <string name="ms_deviceConditionDetail">Device is not able to run application. Please check permission to use location services and if location services are enabled</string>
    <string name="hs_loggedUser">User information</string>
    <string name="hs_login">Login</string>
    <string name="hs_name">Name</string>
    <string name="hs_surname">Surname</string>
    <string name="hs_numberOpenTasks">Number of Open Tasks</string>
    <string name="hs_numberPhotos">Number of Photos</string>
    <string name="hs_noLocationServiceTitle">No Location Service</string>
    <string name="hs_noLocationServiceText">Check that you have activated location service with sufficient privileges.</string>
    <string name="pr_insufficientPermissions">Insufficient permissions</string>
    <string name="pr_description">You will be restricted to use full functionality of the application until you grant all requested application permissions.</string>
    <string name="pr_grandPermissions">Grant permissions</string>
    <string name="tf_task">Task</string>
    <string name="tf_id">Id</string>
    <string name="tf_name">Name</string>
    <string name="tf_status">Status</string>
    <string name="tf_instructions">Instructions</string>
    <string name="tf_reasonForReturn">Reason for Return</string>
    <string name="tf_dateCreated">Date created</string>
    <string name="tf_taskDueDay">Task due date</string>
    <string name="tf_note">Note</string>
    <string name="tf_photos">Photos</string>
    <string name="tf_lat">Latitude</string>
    <string name="tf_lng">Longitude</string>
    <string name="tf_photoCreated">Created</string>
    <string name="tf_nextPhoto">Next</string>
    <string name="tf_previousPhoto">Previous</string>
    <string name="tf_send">Send</string>
    <string name="tf_mapButton">Map</string>
    <string name="tf_lockedTaskTitle">The task is locked</string>
    <string name="tf_lockedTaskText">The task will be locked until it is sent without an error or synchronized with a steady state on the server.</string>
    <string name="tf_sendFailedTitle">Upload not successful</string>
    <string name="tf_savePhotoFileFailure">Failed to save image to a file.\n\n%1$s</string>
    <string name="tf_failedLoadPhoto">Failed to load photo</string>
    <string name="tf_failedLoadPhotoText">An error occurred during loading of the photo from local storage.\n\n%1$s</string>
    <string name="tf_sendDialogTitle">Confirm submission</string>
    <string name="tf_sendDialogText">Do you really want to submit this task, including all its photos?\nOnce sent, it will not be further editable.</string>
    <string name="tf_sendDialogNoPhotosTitle">No photos available</string>
    <string name="tf_sendDialogNoPhotosText">Cannot send task without a photo.</string>
    <string name="tf_deleteDialogTitle">Confirm deletion</string>
    <string name="tf_deleteDialogText">Are you sure you want to delete this photo?</string>
    <string name="tf_pendingValidations">There are photos with pending validations in the task, pressing OK will validate them and then submit the task including all the photos.</string>
    <string name="tf_nointernetupload">No internet connection detected, cannot upload task.</string>
    <string name="tf_nointernet">No internet</string>
    <string name="to_filter">Filter</string>
    <string name="to_showCount">Showing %1$d of %2$d</string>
    <string name="to_containsHint">Name contains</string>
    <string name="to_status">Status:</string>
    <string name="to_sort">Sort:</string>
    <string name="to_showNew">New</string>
    <string name="to_showOpen">Open</string>
    <string name="to_showProvided">Provided</string>
    <string name="to_showAccepted">Accepted</string>
    <string name="to_showDeclined">Declined</string>
    <string name="to_showReturned">Returned</string>
    <string name="to_sortPassedAtEnd">Passed at the End</string>
    <string name="to_sortByStatus">By Status</string>
    <string name="to_sortByDueDate">By Due Date</string>
    <string name="to_sortByName">By Name</string>
    <string name="to_sortAsc">Ascend</string>
    <string name="to_sortDesc">Descend</string>
    <string name="to_photoCount_1">%1$d photo</string>
    <string name="to_photoCount_2">%1$d photos</string>
    <string name="to_photoCount_3">%1$d photos</string>
    <string name="to_created">Created:</string>
    <string name="to_dueDate">Due Date:</string>
    <string name="tpg_taskId">Task Id</string>
    <string name="tpg_order">Order</string>
    <string name="tpg_latitude">Latitude</string>
    <string name="tpg_longitude">Longitude</string>
    <string name="tpg_created">Created</string>
    <string name="tpg_imageDrawError">An unexpected error occurred while rendering the image.\n\n%1$s</string>
    <string name="lg_promptLogin">Login</string>
    <string name="lg_promptPassword">Password</string>
    <string name="lg_actionSignIn">Sign in</string>
    <string name="lg_loginFailed">Login failed:\n%1$s</string>
    <string name="lg_loginFailedNoServer">Unable to connect to the network.</string>
    <string name="lg_loginFailedWrongData">The username or password is incorrect.</string>
    <string name="lg_loginFailedWrongHost">Server unreachable</string>
    <string name="lg_change_server">Select Server</string>
    <string name="cgs_title">Select server</string>
    <string name="cgs_default_server">Default server</string>
    <string name="cgs_custom_server">Custom server</string>
    <string name="cgs_confirm_button">Save</string>
    <string name="cgs_url_hint">https://…</string>
    <string name="cgs_wrong_url">Invalid server URL</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="map_photoInfo_taskId">Task Id:</string>
    <string name="map_photoInfo_lat">Latitude:</string>
    <string name="map_photoInfo_lng">Longitude:</string>
    <string name="map_photoInfo_alt">Altitude[m]:</string>
    <string name="map_photoInfo_created">Created:</string>
    <string name="map_photoInfo_toDetailLabel">Click to go to the task detail.</string>
    <string name="map_photoInfo_toggleLabel">Click the photo to see photos behind it.</string>
    <string name="map_drawingError">Drawing error.</string>
    <string name="map_failedDrawIconPhotoText">Failed to draw a photo icon.\n\n%1$s</string>
    <string name="map_unownedTask">Unassigned</string>
    <string name="map_nd">n/d</string>
    <string name="map_unexpectedExceptionGG">Unexpected error</string>
    <string name="map_exceptionDuringDownloadGG">An unexpected error occurred during downloading of LPIS.</string>
    <string name="map_exceptionAfterDownloadGG">Shapefiles were not downloaded successfully.</string>
    <string name="map_exceptionDuringParsingGG">Downloaded shapefiles are not valid.</string>
    <string name="map_failedCurrentLocationTitle">No Current Location</string>
    <string name="sla_constellationSelect" translatable="false">Constellation</string>
    <string name="sla_galileoe1" translatable="false">Galileo E1</string>
    <string name="sla_galileoe1osnma" translatable="false">Galileo E1 OSNMA Validated</string>
    <string name="sla_galileoe5" translatable="false">Galileo E5</string>
    <string name="sla_galileogps" translatable="false">Galileo + GPS</string>
    <string name="sla_galileoiono" translatable="false">Galileo Iono Free</string>
    <string name="sla_gps" translatable="false">GPS</string>
    <string name="sla_gpsl5" translatable="false">GPS L5</string>
    <string name="sla_gpsiono" translatable="false">GPS Iono Free</string>
    <string name="sla_correctionSelect" translatable="false">Corrections</string>
    <string name="sla_ionocorr" translatable="false">Klobuchar Iono Correction</string>
    <string name="sla_tropocorr" translatable="false">Tropospheric Correction</string>
    <string name="sla_shapirocorr" translatable="false">Relativistic Path Range Correction</string>
    <string name="sla_dgnsscorr" translatable="false">NTRIP</string>
    <string name="sla_sbascorr" translatable="false">SISNET</string>
    <string name="sla_pvtmethod" translatable="false">Positioning Method</string>
    <string name="sla_sbasdgnss" translatable="false">EDAS</string>
    <string name="sla_wlspvt" translatable="false">Weighted Least Square</string>
    <string name="sla_sekf" translatable="false">Static EKF</string>
    <string name="sla_dekf" translatable="false">Dynamic EKF</string>
    <string name="sla_pekf" translatable="false">Pedestrian EKF</string>
    <string name="pd_latitude">Latitude</string>
    <string name="pd_longitude">Longitude</string>
    <string name="pd_created">Created</string>
    <string name="pd_sended">Sent</string>
    <string name="pd_note">Note</string>
    <string name="pd_validated">OSNMA Validated</string>
    <string name="pd_validatedSats">Validated sats</string>
    <string name="pd_sendButton">Send</string>
    <string name="pd_exportPDF">PDF</string>
    <string name="sl_test_credentials">Test credentials</string>
    <string name="sl_edaspwdphd">EDAS Password</string>
    <string name="sl_edasusrphd">EDAS Username</string>
    <string name="pd_network_status">Network Status</string>
</resources>